style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

ul {
  list-style-type: none;
  display: flex;
  gap: 15px;
}

a {
  text-decoration: none;
  color: #e5e7eb;
}

.header-logo {
  flex: 1;
  font-size: 24px;
  color: #f9faf8;
}

.header-nav {
  flex: 1;
  padding-top: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.section-1 {
  background-color: #1f2937;
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 10px 100px;
}

.hero-img {
  background-color: #e5e7eb;
  flex: 0 0 auto;
}

.hero-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding-top: 100px;
  padding-bottom: 100px;
  gap: 200px;
}

.hero-text {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex: 0 1 auto;
}

.hero-text button {
  border-radius: 5px;
  width: 150px;
  padding: 8px;
  background-color: #3882f6;
  color: #e5e7eb;
  border: none;
  font-size: 18px;
  cursor: pointer;
}

.hero-text h1 {
  font-size: 48px;
  font-weight: 900;
  color: #f9faf8;
}

.hero-text p {
  color: #e5e7eb;
  font-size: 18px;
}

.section-2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px 100px;
}

.card img {
  width: 150px;
}

.info {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  padding-top: 25px;
}

.cards {
  display: flex;
  padding-top: 25px;
  justify-content: center;
  align-items: center;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.info h2 {
  font-size: 36px;
  color: #1f2937;
  font-weight: 900;
}

.section-3 {
  padding: 10px 100px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-wrap: wrap;
  background-color: #e5e7eb;
}

.quote p {
  font-size: 36px;
  color: #1f2937;
  font-weight: 300;
  padding-top: 25px;
}

.writer p {
  display: flex;
  padding-top: 25px;
  justify-content: flex-end;
  font-weight: bold;
}

.section-4 {
  background-color: #3882f6;
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 10px 100px;
  margin: 50px 50px;
  border-radius: 10px;
  color: #e5e7eb;
}

.cta-button button {
  border-radius: 5px;
  width: 150px;
  padding: 8px;
  background-color: #3882f6;
  color: #e5e7eb;
  border: 1px white solid;
  font-size: 18px;
  cursor: pointer;
}

.cta {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #1f2937;
  padding: 35px 100px;
  color: #e5e7eb;
}

